@@ -29,3 +29,10 @@ if (_ar # 0 != score _pl) then {
 };
 __TRACE_1("2","getPlayerScores _pl")
 __TRACE_1("2","score _pl")
+
+if (!isNil "d_pl_mt_score_hash") then {
+	sleep 1;
+	if !((getPlayerUID _pl) in d_pl_mt_score_hash) then {
+		d_pl_mt_score_hash set [getPlayerUID _pl, [score _pl, _pl]];
+	};
+};
