@@ -4,6 +4,7 @@
 - Added: Pre-emptive event with some garrisoned guerrillas, new events server setting for "guerrilla and defense only", by longtimegamer
 - Added: Project RACS and SLA support, by Schalldampfer
 - Added: New param d_sm_mt_protectionAI (Side mission/main target protection from friendly AI CAS missiles and bombs (call CAS) in lobby, default off). Adds side mission and/or main target protection for player call CAS AI
+- Added: When a main target is done the top 10 players scores reached during that time are now shown
 - Changed: AI Advanced - enhanced awareness is now enabled by default, range 650m (param d_ai_awareness_rad, you have to change it in the database manually if you already use one)
 - Fixed: Side mission protection disabled for convoy side missions
 - Fixed: Side mission protection for deliver side missions is now at the delivery point and not the start point
